...
    return (
      <SafeAreaView style={tw`flex-1 bg-gray-50`}>
        <View style={tw`bg-utama-kuat px-4 py-4 flex-row items-center`}>
          <TouchableOpacity onPress={() => router.back()} style={tw`p-2 -ml-2`}>
            <ArrowLeft size={24} color="white" />
          </TouchableOpacity>
          <Text style={tw`text-white font-bold text-lg ml-2`}>Notifikasi</Text>
        </View>
        <NotificationSkeleton />
      </SafeAreaView>
    );
  }

...
